# pico

./: .gitignore  AGENTS.md  Cargo.toml  README.md  admin.lua  config.yaml  docker-compose.yaml  http_parser.lua  install.sh  lsqlite3complete-0.9.6-1.rockspec  main.db  main.lua  pico-0.1.1-1.rockspec  pico.lua  processor.lua  server.lua  test.lua
.github/workflows/: rust.yml
db/migrations/: 1756700158_create_pong_table.lua  1758241192_user_table.lua  1760204644:ping_counter.sql  2025-10-10T00:17:13.940345+00:00%ping_counter.sql
db/sprocs/: login.sql  pong.sql
docs/: postprocess.md  setjwt.md  sql.md  views.md
html/: index_html.lua  renderer.lua  sidebar_html.lua  template.lua
http/: http.lua  utils.lua
pico/: Cargo.toml  README.md  admin.lua  makefile
pico-admin/: Cargo.toml  example.lua  main.lua
pico-admin/src/: main.rs
pico-admin/templates/: index.html
pico/db/migrations/: 1760215693:workouts.sql
pico/src/: lib.rs  main.rs
pico/src/admin/: main.rs
pico/src/cron/: mod.rs
pico/src/http/: mod.rs
pico/src/pico/: mod.rs
pico/src/route/: mod.rs
pico/templates/: config.lua  function_authenticate_user.sql  function_pong.sql  function_template.sql  migration_users_table.sql  styles.css
rico/: Cargo.toml  admin.lua  config.lua  server.lua  test.lua
rico/admin/: db.html  index.html  routes.html
rico/db/functions/: createWorkout.sql  getWorkouts.sql  login.sql  pong.sql
rico/db/migrations/: 1760204644:ping_counter.sql  1760215693:workouts.sql  1760820197:users.sql
rico/docs/: Getting_Started.md  preprocess.md  setjwt.md  static_files.md  views.md
rico/functions/: authenticate_user.sql  register_user.sql
rico/src/: lib.rs  main.rs
rico/src/admin/: main.rs
rico/src/html/: mod.rs
rico/src/http/: mod.rs
rico/src/route/: mod.rs
rico/src/sql/: mod.rs
rico/templates/: layout.hbs  links.hbs  markdown.hbs  object.hbs
sql/: sproc.lua  sql.lua
src/: lib.rs  main.rs
src/admin/: mod.rs
src/html/: mod.rs
src/http/: mod.rs
src/route/: mod.rs
src/sql/: mod.rs
templates/: AGENTS.md  form.hbs  function_register_user.sql  layout.hbs  migration_ping_counter.sql  styles.css  table.hbs
