[package]
name = "rico"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
http = "1.3.1"
httparse = "1.10.1"
mlua = { version = "0.11.3", features = ["serde", "lua54"] }
postgres = { version = "0.19.11", features = ["with-chrono-0_4", "with-serde_json-1"] }
regex = "1.11.3"
serde = "1.0.227"
serde_json = "1.0.145"
url = "2.5.7"


[lib]
path = "src/lib.rs"
