[package]
name = "picos"
description = "A minimal web application framework with Lua scripting and PostgreSQL integration."
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Beric Bearnson"]
repository = "https://github.com/bericyb/pico"
keywords = ["web", "framework", "lua", "postgresql", "scripting", "minimal"]
exclude = ["/scratchpad/*", "/docs/*", "/examples/*", "docker-compose.yaml", ".github/*", "makefile"]

[dependencies]
chrono = "0.4.42"
env_logger = "0.11.8"
handlebars = "6.3.2"
http = "1.3.1"
httparse = "1.10.1"
jsonwebtoken = { version = "10.1.0", features = ["rust_crypto"] }
log = "0.4.28"
mlua = { version = "0.11.3", features = ["serde", "lua54", "vendored"] }
percent-encoding = "2.3.1"
postgres = { version = "0.19.11", features = ["with-chrono-0_4", "with-serde_json-1"] }
regex = "1.11.3"
serde = "1.0.227"
serde_json = "1.0.145"
sqlparser = "0.59.0"
url = "2.5.7"
uuid = "1.18.1"


[lib]
path = "src/lib.rs"

[[bin]]
name = "picos"
path = "src/main.rs"

[[bin]]
name = "scratchpad"
path = "src/scratchpad/bin/main.rs"
