[package]
name = "rico"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
features = "0.10.0"
http = "1.3.1"
httparse = "1.10.1"
jsonwebtoken = "10.1.0"
mlua = { version = "0.11.3", features = ["serde", "lua54"] }
postgres = { version = "0.19.11", features = ["with-chrono-0_4", "with-serde_json-1"] }
regex = "1.11.3"
serde = "1.0.227"
serde_json = "1.0.145"
sqlparser = "0.59.0"
url = "2.5.7"
uuid = "1.18.1"


[lib]
path = "src/lib.rs"

[[bin]]
name = "pico_server"
path = "src/main.rs"

[[bin]]
name = "scratchpad"
path = "src/scratchpad/bin/main.rs"
